# diff-sommelier

./: .gitignore  PLAN.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
diff_sommelier/: __init__.py  __main__.py  blast_radius.py  budget.py  cli.py  config.py  enrich.py  hotspots.py  intent.py  no_tests.py  owners.py  parser.py  profiles.py  scorer.py  source.py
diff_sommelier/render/: __init__.py  bundle.py  json.py  markdown.py  rich.py  sarif.py  text.py  tiers.py
diff_sommelier/rules/: __init__.py  control.py  danger.py  size.py  surface.py
examples/: github-action-workflow.yml
scripts/: upsert_comment.sh
tests/: __init__.py  test_blast_radius.py  test_budget.py  test_cli.py  test_cli_blast_radius.py  test_cli_budget.py  test_cli_enrich.py  test_cli_git.py  test_cli_hotspots.py  test_cli_no_tests.py  test_cli_owners.py  test_cli_profiles.py  test_config.py  test_enrich.py  test_hotspots.py  test_parser.py  test_profiles.py  test_render_bundle.py  test_render_markdown.py  test_render_rich.py  test_render_sarif.py  test_render_text.py  test_render_tiers.py  test_rule_control.py  test_rule_danger.py  test_rule_intent.py  test_rule_no_tests.py  test_rule_owners.py  test_rule_size.py  test_rule_surface.py  test_scorer.py  test_source.py
tests/fixtures/: copy.patch  deleted_file.patch  modified_two_files.patch  new_file.patch  no_newline_eof.patch  plain_unified.patch  profile_mix.patch  rename.patch
