[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diff-sommelier"
version = "0.1.0"
description = "Triage your code-review attention: rank diff hunks by risk + surprise and emit a reading order."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "rwrife" }]
keywords = ["diff", "code-review", "git", "triage", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/rwrife/diff-sommelier"
Repository = "https://github.com/rwrife/diff-sommelier"

[project.scripts]
diff-sommelier = "diff_sommelier.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["diff_sommelier"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
